# contacts-1

./: .gitignore  ChangeLog  MAINTAINERS  Makefile.am  NEWS  autogen.sh  configure.ac  contacts.doap  contacts.glade
contacts/: ChangeLog  Makefile.am  contacts.glade.bak
contacts/data/: contacts.glade
contacts/src/: Makefile  main.c
data/: Makefile.am  contacts.1  contacts.desktop  contacts.desktop.in  contacts.glade  contacts.schemas
data/icons/: Makefile.am
data/icons/16x16/: Makefile.am
data/icons/22x22/: Makefile.am
data/icons/24x24/: Makefile.am
data/icons/26x26/: Makefile.am
data/icons/32x32/: Makefile.am
data/icons/48x48/: Makefile.am
data/icons/scalable/: Makefile.am
debian-etch/debian/: changelog  control  copyright  rules
debian-unstable/contacts/debian/: changelog  copyright  rules
debian-unstable/debian/: changelog  control  menu
debian/contacts/debian/: changelog  control
debian/contacts/debian/patches/: photo.diff
hildon/: Makefile.am  hildon-contacts.c
libhito/: Makefile.am  hito-all-group.c  hito-contact-model-filter.c  hito-contact-store.c  hito-contact-view.c  hito-group-store.c  hito-group-store.h  hito-no-category-group.c  hito-vcard-util.c  hito-vcard-util.h
maemo-bora/debian/: changelog  control  postinst
maemo-bora/debian/patches/: fix-iter.diff  jabber.patch
maemo-chinook/debian/: changelog  control  rules
maemo-chinook/debian/patches/: no-widget-icons.patch
old/: Makefile  contacts.gladep.bak
omoko/: ChangeLog  configure.ac
omoko/src/: Makefile.am  contacts-callbacks-ebook.c  contacts-callbacks-ebook.h  contacts-callbacks-ui.c  contacts-callbacks-ui.h  contacts-contact-pane.c  contacts-contact-pane.h  contacts-defs.h  contacts-edit-pane.c  contacts-edit-pane.h  contacts-groups-editor.c  contacts-groups-editor.h  contacts-gtk.c  contacts-gtk.h  contacts-main.c  contacts-omoko-groups-editor.c  contacts-omoko-groups-editor.h  contacts-omoko.c  contacts-omoko.h  contacts-ui.c  contacts-ui.h  contacts-utils.c
openmoko/: Makefile.am  contacts-attribute-store.c  contacts-attribute-store.h  contacts-attributes-editor.c  contacts-attributes-editor.h  contacts-history.c  contacts-history.h  gbase64.c  openmoko-contacts-details.c  openmoko-contacts-details.h  openmoko-contacts-groups.c  openmoko-contacts-groups.h  openmoko-contacts-history.c  openmoko-contacts-history.h  openmoko-contacts-list.c  openmoko-contacts-list.h  openmoko-contacts-util.c  openmoko-contacts-util.h  openmoko-contacts.c  openmoko-contacts.h
openmoko/data/: Makefile.am  contacts.desktop.in
po/: ChangeLog  LINGUAS  POTFILES.in  ar.po  bg.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hu.po  id.po  it.po  ja.po  ko.po  lv.po  nb.po  nds.po  nl.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sr@latin.po  sv.po  th.po  (+5 more)
src/: Makefile  Makefile.am  callbacks-ebook.c  callbacks-ebook.h  callbacks-ui.c  callbacks-ui.h  contacts-callbacks-ebook.c  contacts-callbacks-ebook.h  contacts-callbacks-ui.c  contacts-callbacks-ui.h  contacts-dbus.c  contacts-dbus.h  contacts-dbus.xml  contacts-defs.h  contacts-edit-pane.c  contacts-edit-pane.h  contacts-gtk.c  contacts-gtk.h  contacts-main.c  contacts-main.h  contacts-ui.c  contacts-ui.h  contacts-utils.c  contacts-utils.h  defs.h  globals.h  main.c  main.h  utils.c  utils.h
ubuntu-edgy/debian/: changelog  control
vanilla/: Makefile.am  contacts-callbacks-ui.c  contacts-edit-pane.c  contacts-gtk.c  contacts-main.c  contacts-ui.h
